tests/errors/test_07.x
// Incompatible type for this binary operator

fn main() -> int {

    let x: int = 1 + true;

    let x1: char = "false" - 19;

}